タイムシフトのデザインcssを一部外部ニ移植

--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 
 <head>
     <title>楽天PointMall タイムスケジュール表</title>
+    <link rel="stylesheet" href="css/timeshift.css">
     <style>
         body {
             background-image: url("images/cake.gif");
@@ -49,11 +50,6 @@
             ;
         } */
 
-        .time {
-            width: 24px;
-            text-align: center;
-        }
-
 
         /*.task_line {
             display: flex;
@@ -69,56 +65,7 @@
             text-align: center;
         }
 
-        /** 時間ごと背景色 */
-
-        .invalid {
-            background-color: black;
-            color: red;
-        }
-
-        .even {
-            background-color: palegreen;
-        }
-
-        .odd {
-            background-color: khaki;
-        }
-
-        .span_2h_1 {
-            background-color: palegreen;
-        }
-
-        .span_2h_2 {
-            background-color: khaki;
-        }
-
-        .am {
-            background-color: steelblue;
-        }
-
-        .pm {
-            background-color: sandybrown;
-        }
-
-        .all_day {
-            background-color: skyblue;
-        }
-
-        .morning {
-            background-color: mediumvioletred;
-        }
-
-        .noon {
-            background-color: wheat;
-        }
-
-        .evening {
-            background-color: mediumpurple;
-        }
-
-        .evening {
-            background-color: mediumblue;
-        }
+        
     </style>
 </head>
 
