--- a/index.htm
+++ b/index.htm
@@ -141,7 +141,7 @@
 
 
         <tr class="task_line">
-            <td class="task_link all_day" colspan="24"><a href="" target="_blank">ビンゴ</a></td>
+            <td class="task_link all_day" colspan="24"><a href="https://pointmall.rakuten.co.jp/game/bingo" target="_blank">ビンゴ</a></td>
         </tr>
 
         <tr class="task_line">
@@ -266,8 +266,12 @@
             <td class="task_link all_day" colspan="24">
                 <a href="http://st02.flowerarrangement.work/silhouette/game.php?scd=a0a768fe2be80bdc8f398f525a93168e&x=235&y=26"
                     target="_blank" title="遊ぶまでの遷移がクソだるいのでプレイ終わったらショートカットコマンドでタブを閉じろ（例:Braveならctrl + W)">
-                    シルエット当て
+                    シルエット当て(1回目)
                 </a>
+                / <a href="http://st02.flowerarrangement.work/silhouette/game.php?scd=a0a768fe2be80bdc8f398f525a93168e&x=235&y=26"
+                target="_blank" title="遊ぶまでの遷移がクソだるいのでプレイ終わったらショートカットコマンドでタブを閉じろ（例:Braveならctrl + W)">
+                連続
+            </a>
             </td>
         </tr>
 
@@ -275,17 +279,29 @@
             <td class="task_link all_day" colspan="24">
                 <a href="http://st04.bridalgown.work/tower/game.php?scd=7beb6b8f3ebb2673c85685dcfb675d10&x=229&y=40"
                     target="_blank" title="遊ぶまでの遷移がクソだるいのでプレイ終わったらショートカットコマンドでタブを閉じろ（例:Braveならctrl + W)">
-                    タワー上り
+                    タワー上り(1回目)
+                </a>
+                / 
+                <a href="http://st04.bridalgown.work/tower/game.php?scd=7beb6b8f3ebb2673c85685dcfb675d10&x=229&y=40"
+                    target="_blank" title="遊ぶまでの遷移がクソだるいのでプレイ終わったらショートカットコマンドでタブを閉じろ（例:Braveならctrl + W)">
+                    連続
                 </a>
             </td>
         </tr>
 
         <tr class="task_line">
             <td class="task_link all_day" colspan="24">
-                <a href="http://st05.weddinghall.work/sushi/game.php?scd=bf53b9ffe0d601652a5e2a1ba77df5a2&x=142&y=66"
+                <a href="http://st05.weddinghall.work/sushi/index.php?&muid=e5a006b9aa623f20&mediaId=12"
                     target="_blank" 
                     title="遊ぶまでの遷移がクソだるいのでプレイ終わったらショートカットコマンドでタブを閉じろ（例:Braveならctrl + W)">
-                    寿司
+                    寿司(1回目)
+                </a>
+                 / 
+                 
+                <a href="http://st05.weddinghall.work/sushi/index.php?&muid=e5a006b9aa623f20&mediaId=12"
+                    target="_blank" 
+                    title="遊ぶまでの遷移がクソだるいのでプレイ終わったらショートカットコマンドでタブを閉じろ（例:Braveならctrl + W)">
+                    連続
                 </a>
             </td>
         </tr>
